--- a/index.html
+++ b/index.html
@@ -1,26 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-
-		<!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame
-		Remove this if you use the .htaccess -->
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-		<title>index</title>
-		<meta name="description" content="">
-		<meta name="author" content="sn5689">
-
-		<meta name="viewport" content="width=device-width; initial-scale=1.0">
-
-		<!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
-		<link rel="shortcut icon" href="/favicon.ico">
-		<link rel="apple-touch-icon" href="/apple-touch-icon.png">
-	</head>
-
-	<body>
-		
-		 Hello world
-		
-	</body>
+<html>
+<head>
+<meta charset="utf-8" />
+</head>
+<body id="body">
+<div>
+<header>
+<h1>한알학교</h1>
+</header>
+<div id="toolbar">
+<input type="button" value="앞으로" />
+<input type="button" value="뒤로" />
+</div>
+<nav>
+<ul>
+<li><a href="http://opentutorials.org/course/49/17">한알학교란?</a></li>
+<li><a href="http://opentutorials.org/course/49/16">한알학교의 학생들</a></li>
+<li><a href="http://opentutorials.org/course/49/18">한알학교의 선생님</a></li>
+</ul>
+</nav>
+<article>
+<h2>한알학교의 학생들</h2>
+<div>
+<p>학생수:20명</p>
+<ul>
+<li>
+여학생
+</li>
+<li>
+5명
+</li>
+</ul>
+<ul>
+<li>
+남학생
+</li>
+<li>
+15명
+</li>
+</ul>
+</div>
+</article>
+</div>
+</body>
 </html>
